Line spacing fixes.

--- a/css/publisher_development_executive.css
+++ b/css/publisher_development_executive.css
@@ -66,30 +66,27 @@
         }
             .intro__title {
                 font-weight:100; font-size:1.5em; color:#626262; 
-                padding:0 0.5em; margin:0 0 1.8em 0;
+                padding:0 0.5em; margin:0 0 1.7em 0;
                 text-align:left;
             }
             .intro__copy {
-                font-size:1.25em; font-weight:100; color:#626262; line-height:1.9; 
-                padding:0 0.5em; margin-bottom:3.75em; text-align:left;
+                font-size:1.25em; font-weight:100; color:#626262; line-height:2; /* 40px*/ 
+                padding:0 0.5em; margin:0 0 4.6875rem 0; text-align:left;
             }
             .section__header {
                 font-size:1em; font-weight:300; color:#929292;
-                margin:0 0 0.85em 0;
+                margin:0 0 1.25rem 0;
             }
-            .responsibilities__container {
-                margin:0 0 6rem 0;
-            }
-                .responsibilities__general {
-                    list-style: none; text-transform:uppercase; line-height:1.75em; font-weight:100;
-                    float:left; text-align:right;
+                .section__responsibilities {
+                    list-style: none; line-height:1.5; /* 24px */
+                    font-weight:100; margin:0 0 4.6875rem 0; padding:0;
                 }
-                .responsibilities__specific {
-                    list-style: none; font-weight:100; line-height:1.75em;
-                    float:right; padding:0 0 0 1em;
-                }
+                    .margin-bottom__1em {
+                        margin:0 0 1em 0;
+                    }
                 .requirements__list {
-                    list-style: none; font-weight:100; line-height:1.75em; color:#626262;
+                    list-style: none; font-weight:100; line-height:1.5; color:#626262;
+                    margin:-.125em 0 4.6875rem 0;
                 }
                 .apply__header {
                     font-size:1em; font-weight:300; color:#929292; text-align:center;
@@ -97,7 +94,7 @@
                 }
                 .apply__button {
                     background-color:#2074c9; border: solid 1px #2074c9; outline:none;
-                    border-radius:5em; padding:1em 4em; margin:0 42% 5em 42%;
+                    border-radius:5em; padding:0 4em; margin:0 42% 5em 42%;
                 }
                     .apply__text {
                         font-family: 'MuseoSans', Arial, Helvetica, sans-serif; font-weight:300; font-size:1.25em;
